--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400;700&display=swap"
       rel="stylesheet"
     />
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- BASE CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet" />
     <link href="css/style.css" rel="stylesheet" />
@@ -36,7 +36,7 @@
     <main>
       <div id="form_container">
         <div class="row">
-          <div class="col-md-12 col-lg-5">
+          <div class="col-lg-5">
             <div id="left_form">
               <figure><img src="img/registration_bg.svg" alt="" /></figure>
               <h2>Grievance Form</h2>
@@ -47,7 +47,7 @@
               </p>
             </div>
           </div>
-          <div class="col-md-12 col-lg-7">
+          <div class="col-lg-7">
             <div id="wizard_container">
               <div id="top-wizard">
                 <div id="progressbar"></div>
